makedist: make lua54dir an explicit requirement
(cherry picked from commit 9751d99b7593b8d497fb0e096fa77bb5a08b7b30)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -79,5 +79,5 @@ jobs:
     - name: Smoke Test
       run: |
         ./configure
-        ./makedist dev
+        ./makedist dev $(dirname $(dirname $(which lua)))
         ./smoke_test.sh luarocks-dev.tar.gz
