--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,14 +26,14 @@ jobs:
   TestMatrix:
     strategy:
       matrix:
-        lua-version: ["5.4", "luajit"]
+        lua-version: ["5.4", "luajit-2.1"]
         os: ["ubuntu-latest", "macos-latest"]
     runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@master
 
-    - uses: leafo/gh-actions-lua@master
+    - uses: hishamhm/gh-actions-lua@master
       with:
         luaVersion: ${{ matrix.lua-version }}
 
@@ -72,7 +72,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
 
-    - uses: leafo/gh-actions-lua@v8.0.0
+    - uses: hishamhm/gh-actions-lua@master
       with:
         luaVersion: "5.4"
 
@@ -81,4 +81,3 @@ jobs:
         ./configure
         ./makedist dev
         ./smoke_test.sh luarocks-dev.tar.gz
-
